# research

./: AGENTS.md  README.md
agno/cookbook/01_demo/teams/research/kafka-topic-consumer-offsets/: README.md  notes.md  topic_consumer_offsets.py
apache-iceberg-poc/: README.md  SPEC.md  docker-compose.yml  notes.md
apache-iceberg-poc/sql/: 01_nyc_taxis.sql  02_optional_inline_table.sql
flink-benchmark/: README.md  SPEC.md  notes.md
kafka-topic-consumer-offsets/: .env.example  README.md  docker-compose.local-kafka.yaml  docker-compose.yaml  notes.md  pyproject.toml  requirements.txt  topic_consumer_offsets.py
kafka-topic-consumer-offsets/kstream/: README.md  build.gradle.kts  pom.xml  settings.gradle.kts
kafka-topic-consumer-offsets/kstream/src/main/java/research/kstream/: StreamsPipelineApp.java
kafka-topic-consumer-offsets/kstream/src/main/resources/: application.properties
kafka-topic-consumer-offsets/src/kafka_topic_consumer_offsets/: demo_consumer.py  streams_demo_producer.py  topic_consumer_offsets.py
kafka-topic-consumer-offsets/streams-handoff/: README.md  notes.md
kafka-topic-consumer-offsets/streams-handoff/flink/: continue_from_offsets.sql
