[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kafka-topic-consumer-offsets"
version = "0.1.0"
description = "List Kafka consumer groups for a topic and committed offsets per partition"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "confluent-kafka>=2.3.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
topic-consumer-offsets = "kafka_topic_consumer_offsets.topic_consumer_offsets:main"
demo-kafka-consumer = "kafka_topic_consumer_offsets.demo_consumer:main"
streams-demo-producer = "kafka_topic_consumer_offsets.streams_demo_producer:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kafka_topic_consumer_offsets"]
